use attachment sync (probably trash)